--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "ts-node src/server.ts"
+  },
   "dependencies": {
     "@fastify/static": "^6.9.0",
     "fastify": "^4.15.0",
